# ooplr2new

./: CMakeLists.txt  README.md
include/: decimal.h  myvector.h
src/: decimal.cpp  myvector.cpp  ooplr2.cpp
test/: test_decimal.cpp
